# arduino-tftpianoview

./: CMakeLists.txt  README.md  TFTPianoDisplay.cpp  TFTPianoDisplay.h  build.sh  teensy.build.cmake.in  teensy.options.cmake.in
.github/workflows/: teensy40.yml  ubuntu_x64_cmake.yml
cmake/: arduino_tftpianoview.cmake.in  install_arduino_library.cmake
cmake/toolchains/: teensy41.cmake
examples/: CMakeLists.cmake.in  CMakeLists.txt
examples/basic/: CMakeLists.txt  basic.cpp
examples/first/: CMakeLists.txt  first.cpp
src/: CMakeLists.linux.cmake.in  CMakeLists.teensy.cmake.in  CMakeLists.txt  ST7735_t3View.h  TFTPianoDisplay.cpp  TFTPianoDisplay.h
