cmake_minimum_required(VERSION 3.5)
project(arduino_tftpianoview C CXX)
include(cmake/cmake_declare_and_fetch.cmake.in)
IF (NOT DEFINED BUILD_FOR_TEENSY)
    set(BUILD_FOR_LINUX 1)
    add_compile_definitions(BUILD_FOR_LINUX On)
    DeclareAndFetch(teensy_x86_stubs                    https://github.com/newdigate/teensy-x86-stubs main src)
    DeclareAndFetch(teensy_gfx                          https://github.com/newdigate/teensy-gfx main src)
    DeclareAndFetch(teensy_st7735_linux_stubs           https://github.com/newdigate/teensy-st7735-linux-stubs main src)
ELSE ()
    DeclareAndFetchNoSource(teensy_cmake_macros         https://github.com/newdigate/teensy-cmake-macros.git main)
    include(${teensy_cmake_macros_SOURCE_DIR}/CMakeLists.include.txt)
    import_arduino_library(cores ${teensy_cores_SOURCE_DIR}/teensy4 avr util)
    add_compile_definitions(DISABLE_ST77XX_FRAMEBUFFER)
    import_arduino_library_git(SPI https://github.com/PaulStoffregen/SPI.git master "")
    import_arduino_library_git(SdFat https://github.com/PaulStoffregen/SdFat.git master "src" common DigitalIO ExFatLib FatLib FsLib iostream SdCard SpiDriver)
    import_arduino_library_git(SD https://github.com/PaulStoffregen/SD.git Juse_Use_SdFat src)
    import_arduino_library_git(ST7735_t3 https://github.com/PaulStoffregen/ST7735_t3.git master src)
    import_arduino_library_git(TeensyGFX https://github.com/newdigate/teensy-gfx.git main src)
    import_arduino_library_git(MidiSMFReader https://github.com/newdigate/midi-smf-reader noinstall src)
    import_arduino_library_git(TeensySequencer https://github.com/newdigate/teensy-quencer master src)
ENDIF ()

add_subdirectory(src)
set(CMAKE_VERBOSE_MAKEFILE ON)
IF (DEFINED BUILD_FOR_TEENSY)
    add_subdirectory(examples)
ENDIF()
